--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <p>this is another file</p>
-    <p>this is new feature</p>
+    <p>this is new feature (testing merge conflict)</p>
   </body>
 </html>
